# K8sMatrixWarden

./: .gitignore  .mcp.json  K8s Security Tool - MITRE Architecture Redesign.md  K8s Security Tool v3.0 - MITRE-Aligned Architecture.md  K8s security tool.md  K8sMatrixWarden v1.0 - MITRE-Aligned Architecture.md  K8sMatrixWarden-doc.html  LICENSE  README.md  pyproject.toml  setup-env.sh  spotter-rules-list.json
K8s-Dev-1/: ANALYSIS.md  HANDOFF.md  README.md  REVIEW.md  USAGE.md  docs.html  k8smatrixwarden-report-scan-20260718-100a.md  k8smatrixwarden-report-scan-20260718-1a2e.md  k8smatrixwarden-report-scan-20260718-3a7c.md  k8smatrixwarden-report-scan-20260718-4cf9.md  k8smatrixwarden-report-scan-20260718-584e.md  k8smatrixwarden-report-scan-20260718-6cb7.md  k8smatrixwarden-report-scan-20260718-73f2.md  k8smatrixwarden-report-scan-20260718-9106.md  k8smatrixwarden-report-scan-20260718-9d4d.md  k8smatrixwarden-report-scan-20260718-b206.md  k8smatrixwarden-report-scan-20260718-c629.md  k8smatrixwarden-report-scan-20260718-dc0e.md  k8smatrixwarden-report-scan-20260718-f816.md  k8smatrixwarden-report-scan-20260718-fadb.md  pyproject.toml  requirements.txt
K8s-Dev-1/k8smatrixwarden/: bootstrap.py
K8s-Dev-1/k8smatrixwarden-reports/: _timeline.json  scan-20260718-d1f1.json
K8s-Dev-1/k8smatrixwarden.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
K8s-Dev-1/k8ssec/: __init__.py  __main__.py  bootstrap.py
K8s-Dev-1/tests/: run_tests.py  test_chat.py  test_cis.py  test_correlation.py  test_end_to_end.py  test_finding_context.py  test_mcp.py  test_pdf_report.py  test_web.py  (+7 more)
(+186 files in other folders)
